# fabric-connection

./: .gitignore  CMakeLists.txt  README.md
include/fabricconnection/: connection.hpp
src/: CMakeLists.txt  chunk.cpp  chunk.hpp  client.cpp  client.hpp  connection.cpp  listener.cpp  listener.hpp  listenerinternal.hpp  msgconv.cpp  msgconv.hpp  namedpipe_server.cpp  namedpipe_server.hpp
tests/: CMakeLists.txt  listener_test.cpp
